--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -1,1 +1,8 @@
-<%= render 'index' %>		
+<div class="main-page">
+	<%= render 'globalsearch' %>	
+	<%= render 'help' %>	
+	<%= render 'searchform' %>	
+</div>
+<script type="text/javascript">
+	Frame.initMainPage();
+</script>					
