--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -1,40 +1,11 @@
-    <%= javascript_include_tag "application" %>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+		
+	<%= javascript_include_tag "application" %>
     <%= javascript_include_tag "jquery-1.6.2.min" %>
-    <%= javascript_include_tag "jquery-ui-1.8.16.custom.min" %>   	 
-	<%= javascript_include_tag "jquery.tablesorter.min" %>   
-    <%= javascript_include_tag "jquery.lightbox-0.5.min" %>  	
-  	<script type="text/javascript">
-			$(function(){				
-				// Dialog			
-				$('#dialog').dialog({
-					autoOpen: false,
-					width: 400,
-					buttons: {
-						"Ok": function() { 
-							$('#signin').submit();
-							$(this).dialog("close"); 
-						}, 
-						"Cancel": function() { 
-							$(this).dialog("close"); 
-						} 
-					}
-				});
-
-				// Dialog Link
-				$('#dialog_link').click(function(){
-					$('#dialog').dialog('open');
-					return false;
-				});	
-				
-				// Tabs
-				$('#tabs').tabs();
-				
-			});
-    </script>	
+    <%= javascript_include_tag "jquery-ui-1.8.16.custom.min" %>   		
+	<%= javascript_include_tag "jquery.galleriffic.js" %>   	
+	<%= javascript_include_tag "jquery.opacityrollover.js" %>   	
+	<%= javascript_include_tag "script" %>     
 	
-    <!-- Ativando o jQuery lightBox plugin -->
-    <script type="text/javascript">
-    $(function() {
-        $('#gallery a').lightBox();
-    });
-    </script>	
+
+		
