--- a/app/views/sauna_comments/_sauna_comment.html.erb
+++ b/app/views/sauna_comments/_sauna_comment.html.erb
@@ -1,3 +1,12 @@
-<li>
-<%= sauna_comment.user_name %> <%= sauna_comment.created_at %> - <%= sauna_comment.description %>
+<li class="round-box">
+	<dl>
+		<dt>
+			<span class="author"><%= sauna_comment.user_name %></span>
+			<span class="date"><%= sauna_comment.created_at %></span>
+		</dt>
+		<dd>
+			<%= sauna_comment.description %>
+		</dd>
+	</dl>
 </li>
+
