--- a/app/views/sauna_comments/create.js.erb
+++ b/app/views/sauna_comments/create.js.erb
@@ -1,1 +1,1 @@
-$('<li><%= "#{@sauna.sauna_comments.last.user_name}" %> <%= "#{@sauna.sauna_comments.last.created_at}" %> - <%= "#{@sauna.sauna_comments.last.description}" %></li>').appendTo('#comments ul');
+$('<li class="round-box"><dl><dt><span class="author"><%= @sauna_comment.user_name %></span> <span class="date"><%= @sauna_comment.created_at %></span></dt><dd><%= @sauna_comment.description %></dd></dl></li>').appendTo($('.comment-list'));
