--- a/app/views/saunas/_baseinfo.html.erb
+++ b/app/views/saunas/_baseinfo.html.erb
@@ -4,15 +4,23 @@
 	<% unless @sauna.sauna_items.empty? %>		
 	<ul>
 		<% for sauna_item in @sauna.sauna_items %>							
-			<li><a href="#"><%= sauna_item.name %></a></li>				
+			<li><a href="#" onclick="changeTab(<%= sauna_item.id %>)"><%= sauna_item.name %></a></li>				
 		<% end %>
 	</ul>
 	<% end %>
 	
 	<div class="contacts">
-		Телефон:+7 (3412) 67-90-05:<br />
-		+7 (3412) 56-75-82<br />
+		<%= t :phone_number %>:
+		<%  if @sauna.phone_number1 != nil %>
+			<%=  @sauna.phone_number1 %><br />
+		<% end %>	
+		<%  if @sauna.phone_number2 != nil %>
+			<%=  @sauna.phone_number2 %><br />
+		<% end %>	
+		<%  if @sauna.phone_number3 != nil %>
+			<%=  @sauna.phone_number3 %><br />
+		<% end %>			
 		<%= t :address %>: <%= @sauna.address.full_description %><br />
-		e-mail: holidey-izh@mail.ru
+		<%= t :email %>: TODO
 	</div>
 </div>
