--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -1,8 +1,14 @@
-<div class="main-page">
-	<%= render 'globalsearch' %>	
-	<%= render 'help' %>	
-	<%= render 'searchform' %>	
-</div>
-<script type="text/javascript">
-	Frame.initMainPage();
-</script>					
+<% if signed_in? %>
+	<div class="main-page">
+		something
+	</div>	
+<% else %>
+	<div class="main-page">
+		<%= render 'globalsearch' %>	
+		<%= render 'help' %>	
+		<%= render 'searchform' %>	
+	</div>
+	<script type="text/javascript">
+		Frame.initMainPage();
+	</script>			
+<% end %> 		
