--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -1,36 +1,23 @@
-<% if signed_in? %>	
-
-	<% if current_user.admin? %>
-	<%= link_to t(:users_list), users_path %> \ <%= link_to @sauna.user.name, user_path(@sauna.user.id) %> \
-	<% else %>
-	<%= link_to t(:saunas_list), user_path(@sauna.user.id) %> \ 
-	<% end %>
-	<%=  @sauna.name %> 
-
-	<% if current_user.admin? %>
+<div class="detail-page">
+	<%= render 'navigation' %>	
+	<%= render 'help' %>	
+	
+	<div class="round-box">
 		<%= render 'baseinfo' %>
-	<% else %>
-		<% unless @sauna.sauna_items.empty? %>						
-			<%= render @sauna.sauna_items %>																	
-		<% end %>		
-	<% end %>
+			
+		<div id="tabs">
+		<%  @sauna.sauna_items.each do |sauna_item| %>			
+			<%= render sauna_item %>
+		<% end %>
+		</div>
 				
-<% else %>	
-	<div class="detail-page">
-		<%= render 'navigation' %>	
-		<%= render 'help' %>	
-		
-		<div class="round-box">
-			<%= render 'baseinfo' %>
-			<%= render 'fullinfo' %>
-			<%-#= render 'map' %>		
-			<div class="clearing"></div>
-		</div>		
-		
-		<%-#= render 'gallery' %>
-		<%= render 'comments' %>		
-	</div>				
-<% end %> 
+		<%-#= render 'map' %>		
+		<div class="clearing"></div>
+	</div>		
+	
+	<%-#= render 'gallery' %>
+	<%= render 'comments' %>		
+</div>	
 
 <!-- We only want the thunbnails to display when javascript is disabled -->
 <script type="text/javascript">
@@ -38,4 +25,15 @@
 </script>
 <script type="text/javascript">
 	Frame.initDetailPage();
+</script>
+<script type="text/javascript">
+	$(".sauna-detail-description").hide();
+	$(".sauna-detail-description:first").show();
+</script>
+<script type="text/javascript">
+	function changeTab(id)
+	{		
+		$(".sauna-detail-description").hide();
+		$("#"+id).show();
+	}	
 </script>
