improve javascript and mobile version

--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -3,8 +3,8 @@
 	<%= javascript_include_tag "application" %>
     <%= javascript_include_tag "jquery-1.6.2.min" %>
     <%= javascript_include_tag "jquery-ui-1.8.16.custom.min" %>   		
-	<%= javascript_include_tag "jquery.galleriffic.js" %>   	
-	<%= javascript_include_tag "jquery.opacityrollover.js" %>   	
+	<%= javascript_include_tag "jquery.galleriffic" %>   	
+	<%= javascript_include_tag "jquery.opacityrollover" %>   	
 	<%= javascript_include_tag "script" %>     
 	
 
