--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 		<meta name="robots" content="all" />
 		<meta name="revisit-after" content="1 days" />
 
-		<title>Идем в сауну</title>
+		<title><%= t :title %></title>
 		
 		<%= csrf_meta_tag %>	
 		<%= render 'layouts/javascripts' %>			
