--- a/app/views/sauna_items/_sauna_item.html.erb
+++ b/app/views/sauna_items/_sauna_item.html.erb
@@ -1,4 +1,4 @@
-<div class="round-sub-box sauna-detail-description" id="<%= sauna_item.id %>">
+<div class="sauna-detail-description-tab-content _saunaDetailDescription _saunaDetailDescriptionClosed">				
 	<h2><%= sauna_item.name %></h2>
 	<p>
 		<%= sauna_item.description %>
@@ -27,5 +27,4 @@
 		<dt><%= t :min_price %>: </dt><dd><%= sauna_item.min_price %></dd>
 		<dt><%= t :capacity %>: </dt><dd><%= sauna_item.capacity %></dd>
 	</dl>
-
 </div>
