--- a/app/views/saunas/_sauna.html.erb
+++ b/app/views/saunas/_sauna.html.erb
@@ -1,4 +1,4 @@
-<li class="row">	
+<li class="row" id="sauna-<%= sauna.id %>" >	
 	<a href="/saunas/<%= sauna.id %>">
 		<div class="name">
 			<span class="s-name"><%= sauna.name %></span>
