--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -1,19 +1,18 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>My Page</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<%= javascript_include_tag :defaults %>
-    <%= csrf_meta_tag %>
-</head> 
+		<title><%= t :title %></title> 
+		<meta name="viewport" content="width=device-width, initial-scale=1"> 	
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />		
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+		
+		<%= javascript_include_tag :defaults %>
+		<%= csrf_meta_tag %>
+	</head> 
 <body> 
-
-<div data-role="page">
-	<%= yield %>
-</div>
-
+	<div data-role="page">
+		<%= yield %>
+	</div>
 </body>
 </html>
