--- a/app/views/sauna_items/show.html.erb
+++ b/app/views/sauna_items/show.html.erb
@@ -1,15 +1,30 @@
-<h1> <%= @sauna_item.name %> </h1>
+<div class="detail-page">
+	<%= render '/saunas/navigation' %>	
+	<%= render '/saunas/help' %>	
+	
+	<div class="round-box">
+		<%= render '/saunas/baseinfo' %>
+					
+		<%= render :partial => 'sauna_item',  :locals => { :sauna_item => @sauna_item } %>		
+				
+		<%-#= render 'map' %>		
+		<div class="clearing"></div>
+	</div>		
+	
+	<%-#= render '/saunas/gallery' %>
+	<%= render '/saunas/comments' %>		
+</div>	
 
-
-<%= t :description %>: <%= @sauna_item.description %><br/>
-<%= t :capacity %>: <%= @sauna_item.capacity %><br/>
-<%= t :min_price %>: <%= @sauna_item.min_price %><br/>
-<%= t :min_duration %>: <%= @sauna_item.min_duration %><br/>     
-<%= t :sauna_type_id %>: <%= @sauna_item.sauna_type.name %> <br/>
-<%= t :has_kitchen %>: <input type="checkbox" checked="<%= @sauna_item.has_kitchen %>"/> <br/>
-<%= t :has_restroom %>: <input type="checkbox" checked="<%= @sauna_item.has_restroom %>"/><br/>
-<%= t :has_billiards %>: <input type="checkbox" checked="<%= @sauna_item.has_billiards %>"/><br/>
-<%= t :has_audio %>: <input type="checkbox" checked="<%= @sauna_item.has_audio %>"/><br/>
-<%= t :has_video %>: <input type="checkbox" checked="<%= @sauna_item.has_video %>"/><br/>
-<%= t :has_bar %>: <input type="checkbox" checked="<%= @sauna_item.has_bar %>"/><br/>
-          
+<!-- We only want the thunbnails to display when javascript is disabled -->
+<script type="text/javascript">
+	document.write('<style>.noscript { display: none; }</style>');
+</script>
+<script type="text/javascript">
+	Frame.initDetailPage();
+</script>
+<script type="text/javascript">
+	function changeTab(id)
+	{		
+		// nothing
+	}	
+</script>
