--- a/app/views/saunas/_navigation.html.erb
+++ b/app/views/saunas/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="tab-box">
 	<ul>
-		<li><a href='/saunas'>Результаты поиска</a></li>
-		<li class="active"><span>Holiday Park</span></li>
+		<li><a href='/'><%= t :home %></a></li>
+		<li class="active"><span><%= @sauna.name %></span></li>
 	</ul>
 </div>
