--- a/app/views/saunas/_searchform.html.erb
+++ b/app/views/saunas/_searchform.html.erb
@@ -8,14 +8,14 @@
 					<dd>
 						<div class="slider-box" id="priceSlider">												
 						</div>
-						<%= f.text_field :sauna_items_min_price_gt, :value => '200' %> &ndash;
+						<%= f.text_field :sauna_items_min_price_gt, :value => '500' %> &ndash;
 						<%= f.text_field :sauna_items_min_price_lt, :value => '2000' %>
 					</dd>
 					<dt><%= t :capacity_colon %></dt>
 					<dd>
 						<div id="capacitySlider" class="slider-box">
 						</div>											
-						<%= f.text_field :sauna_items_capacity_gt, :value => '0' %> &ndash;
+						<%= f.text_field :sauna_items_capacity_gt, :value => '4' %> &ndash;
 						<%= f.text_field :sauna_items_capacity_lt, :value => '20' %>
 					</dd>
 					<dt class="main-params-type"><%= t :sauna_type_colon %></dt>
@@ -55,14 +55,6 @@
 							<%= f.check_box :sauna_items_has_video_eq %><%= t :has_video %>  
 						</label>
 					</li>
-					<li>
-						<label>
-							<input type="checkbox"> Массажист
-						</label>
-						<label>
-							<input type="checkbox"> Кольян
-						</label>
-					</li>
 				</ul>
 				<div class="clearing"></div>
 			</div>
@@ -85,11 +77,11 @@
 	<div class="clearing"></div>					
 <% end %>
 
-<ul class="result-list">
+<ul class="result-list" id="saunaResultList">
 	<li class="head">
 		<div class="name"><%= t :sauna %></div>
-		<div class="capacity asc"><%= t :capacity %></div>
-		<div class="price desc"><%= t :price %></div>
+		<div class="capacity"><%= t :capacity %></div>
+		<div class="price"><%= t :price %></div>
 	</li>
 	<%= render @saunas %>						
 </ul>
