--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -29,4 +29,8 @@
 <script type="text/javascript">
 	Frame.initDetailPage();
 </script>
+<script type="text/javascript">
+	$("#leftMenuDetail li:first").addClass("active");
+	$("._saunaDetailDescriptionClosed:first").removeClass("_saunaDetailDescriptionClosed");
+</script>
 
