--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 		<meta name="Resource-type" content="document" />
 		<meta name="robots" content="all" />
 		<meta name="revisit-after" content="1 days" />
+		<meta name="google-site-verification" content="q7mDR-c-V4nPNwEk4X5Vf1XqV9B3epiajBa8L7gZ6ZM" />
+		<meta name='yandex-verification' content='6ca27b58987c713c' />
 
 		<title><%= t :title %></title>
 		
