--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,15 +1,1 @@
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vehicula condimentum. Ut ultrices nulla vehicula est faucibus sed fermentum tortor tristique. Sed vitae augue sem. Sed et mi risus, id dignissim metus. Integer venenatis mauris urna, sit amet facilisis odio. Vivamus odio nibh, convallis ac consequat id, ultricies vel orci. Mauris fringilla enim imperdiet massa egestas sed pharetra dolor luctus. Mauris at feugiat sapien. Nulla volutpat condimentum commodo.
-</p>
-
-
-<div class="signup_button round">
-<div>1</div>
-<div class="red">
-test
-</div>
-</div>
-
-
-
-
+TODO 
