--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -396,7 +396,7 @@ code { padding: .2em .5em; }
 					padding:  0 0 0 20px;
 					width: 65px;
 					text-align: left;
-				}
+				}						
 			.result-list .row {
 				border: 1px solid #fff;
 				-moz-border-radius: 15px;
@@ -682,3 +682,14 @@ code { padding: .2em .5em; }
 			right: 0;
 			top: -55px;
 		}
+
+		
+.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
+.error, .alert {background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;}
+.notice {background:#fff6bf;color:#514721;border-color:#ffd324;}
+.success {background:#e6efc2;color:#264409;border-color:#c6d880;}
+.info {background:#d5edf8;color:#205791;border-color:#92cae4;}
+.error a, .alert a {color:#8a1f11;}
+.notice a {color:#514721;}
+.success a {color:#264409;}
+.info a {color:#205791;}
