--- a/app/views/admin/sauna_items/edit.html.erb
+++ b/app/views/admin/sauna_items/edit.html.erb
@@ -1,49 +1,22 @@
-<% if current_user.admin? %>
-<%= link_to t(:users_list), admin_users_path %> \ <%= link_to @sauna_item.sauna.user.name, admin_user_path(@sauna_item.sauna.user.id) %>  \
-<% else %>
-<%= link_to t(:saunas_list), admin_saunas_path %> \ 
-<% end %>
-<%= link_to @sauna_item.sauna.name, admin_sauna_path(@sauna_item.sauna.id) %> \ <%=  @sauna_item.name %> 
+<div class="detail-page">
 
-<br/>
-<h1><%= t :edit_sauna_item %></h1>
 
-<%= form_for @sauna_item, :url => admin_sauna_item_path(@sauna_item) do |f| %>
-  <%= render 'shared/error_messages', :object => f.object %>
-  <div class="field">
-    <%= f.label t :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label t :description %><br />
-    <%= f.text_area :description, :size => "100x6" %>
-  </div>
-  <div class="field">
-    <%= f.label t :sauna_type_id %><br />
-    <%= f.collection_select :sauna_type_id, SaunaType.all, :id, :name, :include_blank => false %>
-  </div>
-  <div class="field">
-    <%= f.label t :capacity %><br />
-    <%= f.text_field :capacity %>
-  </div>    
-  <div class="field">
-    <%= f.label t :min_price %><br />
-    <%= f.text_field :min_price %>
-  </div>
-  <div class="field">
-    <%= f.label t :min_duration %><br />
-    <%= f.text_field :min_duration %>
-  </div>  
-  <div class="field">  
-    <%= f.check_box :has_kitchen %> <%= f.label t :has_kitchen %> <br/>	
-    <%= f.check_box :has_restroom %> <%= f.label t :has_restroom %><br/>	
-    <%= f.check_box :has_billiards %> <%= f.label t :has_billiards %><br/>	
-    <%= f.check_box :has_audio %> <%= f.label t :has_audio %><br/>	
-    <%= f.check_box :has_video %> <%= f.label t :has_video %><br/>
-    <%= f.check_box :has_bar %> <%= f.label t :has_bar %><br/>	
-  </div>    
+	
+	<%= render 'shared/navigation', :left_link => edit_admin_sauna_path(@sauna_item.sauna.id), 
+		:left_label => @sauna_item.sauna.name, :right_label => @sauna_item.name %>	
+	
+	<div class="round-box">
+		<div class="round-sub-box">		
+			<h2><%= t :edit_sauna_item %></h2>
+				<div class="_expanded">
+					<%= form_for @sauna_item, :url => admin_sauna_item_path(@sauna_item) do |f| %>
+						<%-#= f.hidden_field :sauna_id,  :value => @sauna.id %>
+						<%= render 'form', :f => f %>
+					<% end %>
+				</div>
+				<div class="_closed"></div>
+				<div class="clearing"></div>				
+		</div>
+	</div>
+</div>
 
-  <div class="actions">
-    <%= f.submit t :save %>
-  </div>
-<% end %>
