--- a/app/views/admin/sauna_items/new.html.erb
+++ b/app/views/admin/sauna_items/new.html.erb
@@ -1,52 +1,21 @@
-<%= link_to t(:saunas_list), admin_saunas_path(@sauna.user.id)  %> \ <%=  @sauna.name %> 
-<br/>
+<div class="detail-page">
 
-<h1><%= t :create_new_sauna_item %></h1>
+	<% if current_user.super_admin? %>
+		<%= render 'shared/navigation', :left_link => edit_admin_sauna_path(@sauna.id), :left_label => t(:saunas_list), :right_label => @sauna.name %>		
+	<% else %>
+		<%= render 'shared/navigation', :left_link => admin_saunas_path, :left_label => t(:saunas_list), :right_label => @sauna.name %>			
+	<% end %>
 
-<%= form_for @sauna_item, :url => admin_sauna_items_path do |f| %>
-  <%= render 'shared/error_messages', :object => f.object %>
-  <%= f.hidden_field :sauna_id,  :value => @sauna.id %>
-  <div class="field">
-    <%= f.label t :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label t :description %><br />
-    <%= f.text_area :description, :size => "100x6" %>
-  </div>
-  <div class="field">
-    <%= f.label t :sauna_type_id %><br />
-    <%= f.collection_select :sauna_type_id, SaunaType.all, :id, :name, :include_blank => false %>
-  </div>
-  <div class="field">
-    <%= f.label t :capacity %><br />
-    <%= f.text_field :capacity %>
-  </div>    
-  <div class="field">
-    <%= f.label t :min_price %><br />
-    <%= f.text_field :min_price %>
-  </div>
-  <div class="field">
-    <%= f.label t :min_duration %><br />
-    <%= f.text_field :min_duration %>
-  </div>  
-  <div class="field">
-  
-    <%= f.check_box :has_kitchen %> <%= f.label t :has_kitchen %> <br/>
-	
-    <%= f.check_box :has_restroom %> <%= f.label t :has_restroom %><br/>
-	
-    <%= f.check_box :has_billiards %> <%= f.label t :has_billiards %><br/>
-	
-    <%= f.check_box :has_audio %> <%= f.label t :has_audio %><br/>
-	
-    <%= f.check_box :has_video %> <%= f.label t :has_video %><br/>
-	
-    <%= f.check_box :has_bar %> <%= f.label t :has_bar %><br/>
-	
-  </div>    
-
-  <div class="actions">
-    <%= f.submit t :save %>
-  </div>
-<% end %>
+	<div class="round-box">
+		<div class="round-sub-box">		
+			<h2><%= t :create_new_sauna_item %></h2>
+				<div class="_expanded">
+					<%= form_for @sauna_item, :url => admin_sauna_items_path, :html => { :class => "comment-form" } do |f| %>					
+						<%= render 'form', :f => f %>
+					<% end %>
+				</div>
+				<div class="_closed"></div>
+				<div class="clearing"></div>				
+		</div>
+	</div>
+</div>
