--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,10 +1,17 @@
-<% if signed_in? && !user.super_admin? %>   
-    <li>
-	  <%= user.name %>
-	  <%= link_to user.name, admin_user_path(user) %>
-	  
-	  <%= link_to t(:add), new_admin_sauna_path(:user_id => user.id) %>   	
-	  <%= link_to t(:edit), edit_admin_user_path(user) %>   
-	  <%= link_to t(:delete), admin_user_path(user), :method => :delete, :confirm => t(:confirm_delete_user) %>   			 
-    </li>
-<% end %>
+<li class="row"> 
+	<a href="/admin/users/<%= user.id %>">
+		<div class="name">
+			<span class="s-name"><%= user.name %></span>
+			<div class="address">
+				<%= t :user_type%>: <%= t(user.owner? ? :owner : user.admin? ? :admin : :super_admin) %>
+			</div>
+		</div>
+		<div>
+			<%= link_to t(:add), new_admin_sauna_path(:user_id => user.id) %>     		
+			<%= link_to t(:edit), edit_admin_user_path(user) %>   	
+			<%= link_to t(:delete), admin_user_path(user), :method => :delete, :confirm => t(:confirm_delete_user) %>  
+		</div>
+	</a>	       	 		
+</li>
+
+
