--- a/app/views/sauna_items/_sauna_item.html.erb
+++ b/app/views/sauna_items/_sauna_item.html.erb
@@ -23,7 +23,7 @@
 	</div>
 
 	<dl class="properties">
-		<dt><%= t :sauna_type_id %>: </dt><dd><%= sauna_item.sauna_type.name %></dd>
+		<dt><%= t :sauna_type %>: </dt><dd><%= sauna_item.sauna_type.name %></dd>
 		<dt><%= t :min_price %>: </dt><dd><%= sauna_item.min_price %></dd>
 		<dt><%= t :capacity %>: </dt><dd><%= sauna_item.capacity %></dd>
 	</dl>
