--- a/app/views/admin/saunas/index.html.erb
+++ b/app/views/admin/saunas/index.html.erb
@@ -3,6 +3,8 @@
 		<%= render 'shared/navigation', :left_link => admin_users_path, :left_label => t(:users_list), :right_label => @user.name %>		
 	<% end %>
 	
+	<%= link_to t(:add), new_admin_sauna_path(:user_id => @user.id) %>   
+	
 	<div>		
 		<h1><%= t :saunas_list %></h1>
 		<% unless @saunas.empty? %>
