mobile version for simple phones

--- a/app/views/saunas/search.mobile.erb
+++ b/app/views/saunas/search.mobile.erb
@@ -1,14 +1,10 @@
-<div data-role="header">
-	<h1></h1>	
-	<%= link_to t(:full_version), "/?mobile=0", "data-icon" => "gear", "class" => "ui-btn-right", "data-ajax" => "false" %>
-</div>
-
-<div data-role="content">
-  <ul data-role="listview">
-    <% @saunas.each do |sauna| %>
-    <li>
-      <%= link_to sauna.name, sauna %>      
-    </li>
-    <% end %>
-  </ul>
-</div>
+<table class="search-form">
+	<th align="center"><%= t :search_results %></th>
+	<% @saunas.each do |sauna| %>
+	<tr>
+		<td align="left"  class="<%= cycle('even', 'odd') -%>">
+			<%= link_to sauna.name, sauna %>      			
+		</td>
+	</tr>
+	<% end %>
+</table>	
