--- a/app/views/saunas/show.mobile.erb
+++ b/app/views/saunas/show.mobile.erb
@@ -1,38 +1,20 @@
-<div data-role="header">
-	<h1></h1>	
-	<%= link_to t(:home), "/", "data-icon" => "back", "class" => "ui-btn-left", "data-ajax" => "false" %>
-	<!--
-	<%= link_to t(:full_version), "/?mobile=0", "data-icon" => "gear", "class" => "ui-btn-right", "data-ajax" => "false" %>
-	-->
-</div>
-
-<div data-role="content">
-	<p>
-		<b>
-			<%= @sauna.name %>
-		</b>
-		<br/>
-		<%= t :address %>: <%= @sauna.address.full_description %><br/>
-		<%= t :phone_number %>: <%= @sauna.phone_number1 %>
-	</p>
-	
-
-	<div data-role="collapsible" data-content-theme="c">
-	   <h4><%= t :photo %></h4>
-		  <ul data-role="listview">
-			<% @sauna.sauna_photos.each do |sauna_photo| %>
-			<li>
-			   <%= image_tag sauna_photo.photo.url(:thumb) %>  
-			</li>
-			<% end %>
-		  </ul>   
-	</div>
+<table class="search-form">
+	<th align="center"><%= t :description %></th>
+	<tr>
+		<td>
+			<b><%= @sauna.name %></b><br/>
+			<%= t :address %>: <%= @sauna.address.full_description %><br/>
+			<%= t :phone_number %>: <%= @sauna.phone_number1 %>
+		</td>
+	</tr>	
     <% @sauna.sauna_items.each do |sauna_item| %>
-		<div data-role="collapsible" data-content-theme="c">
-		   <h4><%= sauna_item.name %></h4>
-		   <p><%= sauna_item.description %></p>		   
-		</div>  
-    <% end %>
-</div>
+		<tr>
+			<td>
+				<b><%= sauna_item.name %></b><br/>
+				<%= sauna_item.description %>
+			</td>
+		</tr>		
+    <% end %>	
+</table>
 
 
