--- a/app/views/saunas/index.mobile.erb
+++ b/app/views/saunas/index.mobile.erb
@@ -6,7 +6,7 @@
 				<%= t :capacity_from %>
 			</td>
 			<td>
-				<%= f.text_field :sauna_items_capacity_gt,  :size => 4 %> <%= t(:v_chel) %>	
+				<%= f.text_field :sauna_items_capacity_gteq,  :size => 4 %> <%= t(:v_chel) %>	
 			</td>
 		</tr>
 		<tr>
@@ -14,7 +14,7 @@
 				<%= t :price_to %>
 			</td>
 			<td>
-				<%= f.text_field :sauna_items_min_price_lt,  :size => 4 %> <%= t(:v_rub) %>	
+				<%= f.text_field :sauna_items_min_price_lteq,  :size => 4 %> <%= t(:v_rub) %>	
 			</td>
 		</tr>
 		<tr>				
