--- a/app/views/admin/saunas/_form.html.erb
+++ b/app/views/admin/saunas/_form.html.erb
@@ -33,6 +33,15 @@
 		<%= f.text_field :phone_number1 %>			
 	</dd>
 	
+	<dt><label for="sauna_phone_number2"><%= t :phone_number %>:</label></dt>
+	<dd>
+		<%= f.text_field :phone_number2 %>			
+	</dd>
+
+	<dt><label for="sauna_phone_number3"><%= t :phone_number %>:</label></dt>
+	<dd>
+		<%= f.text_field :phone_number3 %>			
+	</dd>	
 	
 	<%= f.fields_for :sauna_photos do |sf| %>
 		<%= render 'shared/error_messages', :object => sf.object %>	
