--- a/app/views/admin/sauna_items/_sauna_item.html.erb
+++ b/app/views/admin/sauna_items/_sauna_item.html.erb
@@ -2,7 +2,7 @@
 	<dl>
 		<dt>
 			<span class="author"><%= sauna_item.name %></span>
-			<span class="date">test</span>
+			<span class="date"></span>
 		</dt>
 		<dd>
 			<%= sauna_item.description %>
