--- a/app/views/sauna_items/_sauna_item.html.erb
+++ b/app/views/sauna_items/_sauna_item.html.erb
@@ -27,4 +27,5 @@
 		<dt><%= t :min_price %>: </dt><dd><%= sauna_item.min_price %></dd>
 		<dt><%= t :capacity %>: </dt><dd><%= sauna_item.capacity %></dd>
 	</dl>
+	<div class="clearing"></div>
 </div>
