--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-page">
 	<%= render 'globalsearch' %>	
-	<%= render 'shared/help' %>	
+	<%= render 'shared/mobile' %>	
 	<%= render 'searchform' %>	
 </div>
 <script type="text/javascript">
