--- a/app/views/shared/_mobile.html.erb
+++ b/app/views/shared/_mobile.html.erb
@@ -1,5 +1,3 @@
-<div style="round-box search-box">
-
-    <%= link_to t(:mobile_version), :mobile => 1 %>  
-  
+<div class="mobile-ver">
+	<%= link_to t(:mobile_version), :mobile => 1 %>  | <%= link_to t(:smartfon_version), :mobile => 2 %>  
 </div>
