--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -1,8 +1,6 @@
-<div class="detail-page">
-	
-	<%= render 'shared/navigation', :left_link => root_path, :left_label => t(:home), :right_label => @sauna.name %>	
-	
-	<%= render 'shared/help' %>	
+<div class="detail-page">	
+	<%= render 'shared/navigation', :left_link => root_path, :left_label => t(:home), :right_label => @sauna.name %>		
+	<%= render 'shared/mobile' %>	
 	
 	<div class="round-box">
 		<%= render 'baseinfo' %>
@@ -11,6 +9,8 @@
 			<% @sauna.sauna_items.each do |sauna_item| %>					
 				<%= render sauna_item %>					
 			<% end %>	
+
+			<%= render 'shared/social' %>
 		</div>
 				
 		<%= render 'map' %>		
