--- a/app/views/saunas/_sauna.html.erb
+++ b/app/views/saunas/_sauna.html.erb
@@ -4,7 +4,7 @@
 			<span class="s-name"><%= sauna.name %></span>
 			<div class="address">
 				<%= sauna.address.description %>; 
-				<%= t :short_phone_number %>: <%= sauna.phone_number1 %>, 				
+				<%= t :short_phone_number %>: <%= sauna.phone_number1 %>			
 			</div>
 		</div>
 		<div class="capacity">
