--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,36 @@
 		<%= render 'layouts/stylesheets' %>		
 	</head>
 	<body>
+
+	<!-- Script for like. Start. -->
+		<div id="fb-root"></div>
+		<script>
+			(function(d, s, id) {
+
+			  var js, fjs = d.getElementsByTagName(s)[0];
+
+			  if (d.getElementById(id)) return;
+
+			  js = d.createElement(s); js.id = id;
+
+			  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=152456158162750";
+
+			  fjs.parentNode.insertBefore(js, fjs);
+
+			}(document, 'script', 'facebook-jssdk'));
+		</script>
+
+		<script type="text/javascript">
+			window.onload = function () {
+			 VK.init({apiId: 2056734, onlyWidgets: true});
+			 VK.Widgets.Like('vk_like', {width: 100, pageTitle: '', pageDescription: ''}, 0);
+			}
+		</script>
+		<script type="text/javascript" src="https://apis.google.com/js/plusone.js">{lang: 'ru'}</script>
+		<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript" charset="windows-1251"></script>
+		<script src="http://platform.twitter.com/widgets.js"></script>
+	<!-- Script for like. End. -->
+	
 		<div class="wrapper">
 			<div class="content">
 				<div class="content-left">
