--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -1,4 +1,4 @@
-<!-- Ñêðèïòû äëÿ ëàéêîâ -->
+<!-- Ð¡ÐºÑ€Ð¸Ð¿Ñ‚Ñ‹ Ð´Ð»Ñ Ð»Ð°Ð¹ÐºÐ¾Ð² -->
 	<div id="fb-root"></div>
 	<script>
 		(function(d, s, id) {
@@ -22,7 +22,7 @@
 	<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript" charset="windows-1251"></script>
 
 	<script src="http://platform.twitter.com/widgets.js"></script>
-<!-- Êîíåö ñêðèïòîâ äëÿ ëàéêîâ -->
+<!-- ÐšÐ¾Ð½ÐµÑ† ÑÐºÑ€Ð¸Ð¿Ñ‚Ð¾Ð² Ð´Ð»Ñ Ð»Ð°Ð¹ÐºÐ¾Ð² -->
 
 <div class="detail-page">	
 	<%= render 'shared/navigation', :left_link => root_path, :left_label => t(:home), :right_label => @sauna.name %>		
@@ -61,4 +61,3 @@
 	$("#leftMenuDetail li:first").addClass("active");
 	$("._saunaDetailDescriptionClosed:first").removeClass("_saunaDetailDescriptionClosed");
 </script>
-
