--- a/app/views/pages/about.mobile.erb
+++ b/app/views/pages/about.mobile.erb
@@ -1,5 +1,5 @@
 <div class="main-page">		
-	<h1>Бани и сауны в Ижевске</h1>	
+	<b>Бани и сауны в Ижевске</b>	
 	<p>Проект "Бани и сауны в Ижевске" - это единый каталог бань и саун в Ижевске, а также удобный механизм их поиска. 
 	Вы можете осуществлять поиск по нужным вам критерия (цена, вместимость, тип и т.д.), читать описания, смотреть 
 	фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Чтобы вам было удобнее, мы сделали мобильную 
@@ -9,11 +9,5 @@
 	<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
     поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
 	новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно.
-	</p>
-	
-	<p>
-	Вы непонятно, как пользоваться поиском, у вас есть какие-то пожелания или вы хотите связаться с администраторами сайта? Нажмите 
-	<a href="#">здесь</a>, мы с удовольствием вас выслушаем.
-	</p>
-					
+	</p>				
 </div>		
