--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -1,5 +1,5 @@
 <div class="main-page">
-	<%= render 'globalsearch' %>	
+	<%= render 'shared/globalsearch' %>	
 	<%= render 'shared/mobile' %>	
 	<%= render 'searchform' %>	
 </div>
