--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,19 +1,32 @@
-<div class="main-page">		
-	<h1>Бани и сауны в Ижевске</h1>	
-	<p>Проект "Бани и сауны в Ижевске" - это единый каталог бань и саун в Ижевске, а также удобный механизм их поиска. 
-	Вы можете осуществлять поиск по нужным вам критерия (цена, вместимость, тип и т.д.), читать описания, смотреть 
-	фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Чтобы вам было удобнее, мы сделали мобильную 
-	версию, которая ползволяет искать бани и сауны в Ижевске с вашего телефона. 
-	</p>
+<div class="main-page">	
+	<%= render 'shared/globalsearch' %>	
+	<%= render 'shared/mobile' %>	
+	<div class="round-box filter-box">
+		<ul>
+			<li class="black _closeOnReady _expandedBox filter-section closed">
+				<h1>Бани и сауны в Ижевске</h1>
+				<div class="extra_params _expanded">
+					<p>Проект "Бани и сауны в Ижевске" - это единый каталог бань и саун в Ижевске, а также удобный механизм их поиска. 
+					Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
+					фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Чтобы вам было удобнее, 
+					мы сделали мобильную версию, которая ползволяет искать бани и сауны в Ижевске с вашего телефона.
+					</p>
+
+					<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
+					поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
+					новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно.
+					</p>
+
+					<p>
+					Вам непонятно, как пользоваться поиском, у вас есть какие-то пожелания или вы хотите связаться с администраторами сайта, чтобы 
+					добавить сауну или разместить рекламу? Нажмите <a href="http://go-to-sauna.reformal.ru" target="blank">здесь</a>, мы с удовольствием вас выслушаем!
+					</p>	
+					<div class="clearing"></div>
+				</div>	
+			</li>		
+		</ul>
+
+	</div>
 	
-	<p>Но мы позаботились не только о тех, кто любит погреться в сауне! Допустим, вы - владелец бани или сауны и хотите увеличить 
-    поток клиентов. Зарегистрируйте бесплатно вашу сауну и о ней узнают сотни пользователей нашего сайта. Редактируйте описание, добавляйте 
-	новые сауны, выкладывайте фотографии и модерируйте отзывы - всё это абсолютно бесплатно.
-	</p>
-	
-	<p>
-	Вы непонятно, как пользоваться поиском, у вас есть какие-то пожелания или вы хотите связаться с администраторами сайта? Нажмите 
-	<a href="#">здесь</a>, мы с удовольствием вас выслушаем.
-	</p>
 					
 </div>		
