commit new page - all saunas

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,10 @@
 	<div class="center">
 		<ul>
 			<li><a href="/">главная</a></li>
+			<li>			
+			<a href="/all">все сауны</a>
+			</li>
+			
 			<li><a href="/about">о проекте</a></li>
 			<!-- <li><a href="/contact">контакты</a></li>	-->
 			
