--- a/app/views/admin/sauna_photos/_sauna_photo.html.erb
+++ b/app/views/admin/sauna_photos/_sauna_photo.html.erb
@@ -3,7 +3,7 @@
 		<% thumb_image = image_tag sauna_photo.photo.url(:thumb) %>
 		<%= link_to thumb_image, sauna_photo.photo.url(:pagesize), :title => sauna_photo.description, :class => "thumb" %>
 		<div class="caption">
-			<div class="image-title"><%= sauna_photo.photo_file_name %></div>
+			<div class="image-title"></div>
 			<div class="image-desc"><%= sauna_photo.description %>
 			
 				<br/>
