--- a/app/views/saunas/_baseinfo.html.erb
+++ b/app/views/saunas/_baseinfo.html.erb
@@ -25,6 +25,6 @@
 			<%=  @sauna.phone_number3 %><br />
 		<% end %>			
 		<%= t :address %>: <%= @sauna.address.full_description %><br />
-		<%= t :email %>: TODO
+		<%= t :email %>: <%= @sauna.email %>
 	</div>
 </div>
